--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ font-family: 'Poppins', sans-serif;
 font-family: 'Rokkitt', serif;
 }
 h1{
-    font-size: 50px;
+   font-size: 50px;
+   border-left: 5px solid;
+   border-image: linear-gradient(rgb(235, 121, 140), rgb(82, 21, 196));
+   border-image-slice: 1;
+   
+   
     
 }
 h2{
-    font-size: 50px;
+    font-size: 30px;
     
 }
 .likha-boro{
@@ -23,9 +28,10 @@ h2{
 .lightcoral{
     
    color: lightcoral; 
+
 }
-section{
-    display: flex;
+.flex-con{
+    display: flex;    
 }
 .half-width{
     width: 50%;
@@ -44,3 +50,42 @@ section{
     font-weight: 600;
     border-radius: 5px;
 }
+.mission-center{
+    font-size: 40px;
+    font-weight: 400;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+}
+#mvg1{
+   width: 60%;
+   margin-left: 40px;
+   margin-right: 20px;
+   padding-left: 30px;
+   padding-right: 30px;
+   border-radius: 20px;
+   box-shadow: 10px 10px 30px grey;
+   background-color: rgb(247, 204, 227);
+   
+   
+}
+#mvg2{
+    width: 60%;
+   margin-left: 40px;
+   margin-right: 20px;
+   padding-left: 30px;
+   padding-right: 30px;
+   border-radius: 20px;
+   box-shadow: 10px 10px 30px grey;
+   background-color: rgb(208, 234, 255);
+}   
+ #mvg3{
+    width: 60%;
+    margin-left: 40px;
+    margin-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 30px grey;
+    background-color: rgb(250, 246, 185);
+    
+ }
