--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ h2{
    width: 60%;
    margin-left: 40px;
    margin-right: 20px;
-   padding-left: 30px;
-   padding-right: 30px;
+   padding-left: 2%;
+   padding-right: 2%;
    border-radius: 20px;
    box-shadow: 10px 10px 30px grey;
    background-color: rgb(247, 204, 227);
@@ -73,7 +73,7 @@ h2{
    margin-left: 40px;
    margin-right: 20px;
    padding-left: 30px;
-   padding-right: 30px;
+   padding-right:30px;
    border-radius: 20px;
    box-shadow: 10px 10px 30px grey;
    background-color: rgb(208, 234, 255);
@@ -89,3 +89,30 @@ h2{
     background-color: rgb(250, 246, 185);
     
  }
+ .half-width2{
+    width: 70%;
+    padding-left:3%;
+    padding-right: 5%;
+    padding-top: 5%;
+    
+} 
+.half-width2 img{
+    width: 90%;
+    border-radius: 30px;
+    padding-left: 15%;
+    
+    
+}
+.half-width3{
+    width: 70%;
+    padding-left: 10%;
+    padding-right: 5%;
+    padding-top: 5%;
+    
+} 
+.half-width3 img{
+    width: 80%;
+    padding-left: 10%;
+    padding-right: 2%;
+    
+}
