--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
 }
 
 h2{
-    font-size: 40px;
+    font-size: 30px;
     
     
 }
@@ -51,9 +51,9 @@ h2{
     border-radius: 5px;
 }
 .mission-center{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 400;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 }
 #mvg1{
@@ -68,6 +68,10 @@ h2{
    
    
 }
+#mvg1 img{
+    width: 50%;
+    
+}
 #mvg2{
     width: 60%;
    margin-left: 40px;
@@ -77,7 +81,11 @@ h2{
    border-radius: 20px;
    box-shadow: 10px 10px 30px grey;
    background-color: rgb(208, 234, 255);
-}   
+}  
+#mvg2 img{
+    width: 50%;
+    
+} 
  #mvg3{
     width: 60%;
     margin-left: 40px;
@@ -89,6 +97,10 @@ h2{
     background-color: rgb(250, 246, 185);
     
  }
+ #mvg3 img{
+    width: 50%;
+    
+}
  .half-width2{
     width: 70%;
     padding-left:3%;
